# Classifier_Email

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  sample.json
.github/workflows/: deploy-appservice.yml
email_system/: cleaning.py  cli.py  cluster.py  embedding.py  eval.py  intent.py  io.py  models.py  pipeline.py  taxonomy.py  threading.py  utils.py  webapp.py  worker.py
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
tests/: test_cleaning.py  test_intent.py  test_pipeline.py  test_threading.py
