[project]
name = "email-system"
version = "0.1.0"
description = "Automatic email categorization with LLM/ML pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-identity>=1.17.0",
    "azure-storage-blob>=12.19.0",
    "azure-storage-queue>=12.9.0",
    "hdbscan>=0.8.33",
    "langdetect>=1.0.9",
    "numpy>=1.26.0",
    "openai>=1.12.0",
    "pydantic>=2.6.0",
    "scikit-learn>=1.4.0",
    "typer>=0.9.0",
    "tqdm>=4.66.0",
    "pytest>=7.4.0",
]

[project.scripts]
email-system = "email_system.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["email_system*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
